--- a/src/components/others/news/news.scss
+++ b/src/components/others/news/news.scss
@@ -1,5 +1,5 @@
 .news {
-  margin-bottom: 100px;
+  margin-bottom: 50px;
   
   .news__header {
     padding: 102px 15px 324px;
@@ -8,6 +8,10 @@
     text-align: center;
 
     @media screen and (max-width: $media-desktop-sm) {
+      padding: 50px 15px 250px;
+    }
+
+    @media screen and (max-width: $media-desktop-xl) {
       padding: 50px 15px 200px;
     }
   }
